Added Minotaur class
Also split up CommonwealthFleet.xml

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -488,6 +488,7 @@
     <Xml Include="CommonwealthShips.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="CommonwealthStarCarrier.xml" />
     <Xml Include="CompatibilityLibrary.xml" />
     <Xml Include="CoreFireEffects.xml">
       <SubType>Designer</SubType>
