Added to project

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -485,6 +485,7 @@
     <Xml Include="CommonwealthMilitiaMission03.xml" />
     <Xml Include="CommonwealthMilitiaMission04.xml" />
     <Xml Include="CommonwealthMilitiaMissionSK01.xml" />
+    <Xml Include="CommonwealthMission01.xml" />
     <Xml Include="CommonwealthShips.xml">
       <SubType>Designer</SubType>
     </Xml>
