--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -579,6 +579,7 @@
     <Xml Include="RPGLibrary.xml" />
     <Xml Include="GalaxyLibrary.xml" />
     <Xml Include="RPGMembership.xml" />
+    <Xml Include="RPGRumors.xml" />
     <Xml Include="RPGShipBroker.xml">
       <SubType>Designer</SubType>
     </Xml>
