--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -488,6 +488,7 @@
     <Xml Include="CommonwealthMilitiaMission04.xml" />
     <Xml Include="CommonwealthMilitiaMissionSK01.xml" />
     <Xml Include="CommonwealthMission01.xml" />
+    <Xml Include="CommonwealthRonins.xml" />
     <Xml Include="CommonwealthShips.xml">
       <SubType>Designer</SubType>
     </Xml>
