--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -391,7 +391,7 @@
     <None Include="RPGWingmen.xml">
       <SubType>Designer</SubType>
     </None>
-    <None Include="RPGArmorDockScreens.xml">
+    <None Include="RPGDockServices.xml">
       <SubType>Designer</SubType>
     </None>
     <None Include="RPGDeviceDockScreens.xml">
