--- a/TransData/TransData.vcxproj
+++ b/TransData/TransData.vcxproj
@@ -479,6 +479,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Game\TLisp\GetDistancePerformance.tlisp" />
     <None Include="..\Game\TLisp\LanguageUnitTest.tlisp" />
     <None Include="..\Game\TLisp\ListUnitTest.tlisp" />
     <None Include="..\Game\TransData.xml">
