--- a/TransData/TransData.vcxproj.filters
+++ b/TransData/TransData.vcxproj.filters
@@ -197,5 +197,8 @@
     <None Include="..\Game\TLisp\LanguageUnitTest.tlisp">
       <Filter>TLisp Files</Filter>
     </None>
+    <None Include="..\Game\TLisp\GetDistancePerformance.tlisp">
+      <Filter>TLisp Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
