--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -181,6 +181,7 @@
     <Xml Include="Antarctica01.xml" />
     <Xml Include="Antarctica02.xml" />
     <Xml Include="AntarcticaD01.xml" />
+    <Xml Include="Barricades.xml" />
     <Xml Include="BattleArenaChallenger.xml" />
     <Xml Include="BattleArenaFight.xml" />
     <Xml Include="BattleArenaKidnapped.xml" />
