Moved Corporate Trading Post to its own file

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -509,6 +509,7 @@
       <SubType>Designer</SubType>
     </Xml>
     <Xml Include="CorporateInsurance.xml" />
+    <Xml Include="CorporateTradingPost.xml" />
     <Xml Include="CSCTerra.xml" />
     <Xml Include="Dall01.xml" />
     <Xml Include="Dantalion.xml" />
