--- a/TransData/TransData.vcxproj.filters
+++ b/TransData/TransData.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="LanguageTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CCTransDataLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
