--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -780,5 +780,8 @@
     <Xml Include="..\Extensions\Diagnostics\Diagnostics.xml">
       <Filter>Extensions\Diagnostics</Filter>
     </Xml>
+    <Xml Include="CommonwealthCharacters.xml">
+      <Filter>Human Space Library\Commonwealth</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
