--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -177,6 +177,7 @@
       <SubType>Designer</SubType>
     </None>
     <Xml Include="..\Extensions\Diagnostics\Diagnostics.xml" />
+    <Xml Include="..\Extensions\Diagnostics\DockScreenTests.xml" />
     <Xml Include="..\Extensions\Diagnostics\ItemUnitTests.xml" />
     <Xml Include="..\Extensions\Diagnostics\RPGUnitTests.xml" />
     <Xml Include="Abbasid.xml" />
