--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -182,6 +182,7 @@
     <Xml Include="..\Extensions\Diagnostics\RPGUnitTests.xml" />
     <Xml Include="..\Extensions\Diagnostics\TestItems.xml" />
     <Xml Include="Abbasid.xml" />
+    <Xml Include="Analyzers.xml" />
     <Xml Include="Anarchists.xml" />
     <Xml Include="Antarctica01.xml" />
     <Xml Include="Antarctica02.xml" />
