--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -795,5 +795,8 @@
     <Xml Include="..\Extensions\Diagnostics\TestItems.xml">
       <Filter>Extensions\Diagnostics</Filter>
     </Xml>
+    <Xml Include="Analyzers.xml">
+      <Filter>Human Space Library\Items</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
